# goods_categorization_demo

./: .gitignore  Dockerfile  demo.mov  docker-compose.local.yaml  docker-compose.yaml  pyproject.toml  readme.md
data/: categories.json  good_items.json  good_items_en.json  graph.json  graph_en.json  market_categories.txt  market_categories_translate_en.txt  market_categories_translate_ru.txt
frontend/: README.md  package-lock.json  package.json  quasar.conf.js
frontend/src/components/: EmbeddingChart.js
frontend/src/css/: quasar.variables.scss
frontend/src/layouts/: MainLayout.vue
frontend/src/pages/: Index.vue
goods_categorizer/: categorizer.py  config.py  convert_to_projector.py  data_parser.py  save_for_translation.py  service.py  translate_categories.py  upload_data.py
goods_categorizer/vectorizer/: dm_reduction.py  vectorizer.py
notebooks/: visualize.ipynb
notebooks/.ipynb_checkpoints/: visualize-checkpoint.ipynb
