[tool.poetry]
name = "goods_categorization_demo"
version = "0.1.0"
description = "Demo for automatic cateorizaion of consumer goods with arbitrary category tree"
authors = ["Andrey Vasnetsov <andrey@vasnetsov.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
sentence-transformers = "^2.0.0"
numpy = "^1.21.0"
pandas = "1.2.5"
umap-learn = {extras = ["plot"], version = "^0.5.1"}
numba = "0.53"
seaborn = "^0.11.1"
fastapi = "^0.65.3"
uvicorn = "^0.14.0"
qdrant-client = "^0.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
